# Functional_Containers

./: .clang-format  CMakeLists.txt  LICENSE  README.md  coverage.json  coverage.xml
.github/scripts/: build.sh  doc.sh
.github/workflows/: ci.yml  doc.yml
Tests/: CMakeLists.txt  test.cpp  test_algos.cpp  test_filter.cpp  test_map.cpp  test_optional.cpp  test_zip.cpp
docs/coverage/: index.Tests_test_algos.cpp.html  index.Tests_test_filter.cpp.html  index.Tests_test_map.cpp.html  index.Tests_test_optional.cpp.html  index.Tests_test_zip.cpp.html  index.html  index.src_fc_algos.h.html  index.src_fc_filter.h.html  index.src_fc_ints.h.html  index.src_fc_iter.h.html  index.src_fc_map.h.html  index.src_fc_optional.h.html  index.src_fc_utils.h.html  index.src_fc_zip.h.html
docs/documentation/: algos_8h.html  algos_8h.js  algos_8h__dep__incl.map  algos_8h__dep__incl.md5  algos_8h__incl.map  algos_8h__incl.md5  algos_8h_source.html  annotated.html  annotated_dup.js  classes.html  classfc_1_1optional-members.html  classfc_1_1optional.html  classfc_1_1optional.js  classfc_1_1optional_3_01T_01_6_01_4-members.html  classfc_1_1optional_3_01T_01_6_01_4.html  classfc_1_1optional_3_01T_01_6_01_4.js  classfc_1_1optional_3_01T_01_6_01_4__inherit__graph.map  classfc_1_1optional_3_01T_01_6_01_4__inherit__graph.md5  classfc_1_1optional__coll__graph.map  classfc_1_1optional__coll__graph.md5  concepts_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_b3db057d209ac261ba2b77e094253f98.html  dir_b3db057d209ac261ba2b77e094253f98.js  files.html  filter_8h_source.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_12.map  (+246 more)
docs/documentation/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  files_0.js  pages_0.js  (+1 more)
src/: CMakeLists.txt
src/fc/: CMakeLists.txt  algos.h  concepts.h  filter.h  ints.h  iter.h  map.h  optional.h  utils.h  zip.h
